fixes scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .App {
   text-align: center;
-  width: 100vw;
-  min-height: 100vh;
+  max-width: 100vw;
+  min-height: 96vh;
   background-color: #232323;
   padding-bottom: 30px;
   /* background-size: cover; */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 span {
